# freeswitch-contrib

./: README.md  file.txt
DelphiWorld/: read me.txt  skypiax_originator.xml  welcome.lua
DelphiWorld/Easyroute_manager/: index.php
DelphiWorld/dialplan/: recording.xml  time.xml
DelphiWorld/fmc/: readme.txt
DelphiWorld/scripts/: fs_install.sh
DelphiWorld/welcome_ivr/: welcome.lua  welcome.xml
Phil/pylons/: freeswitchcdr.py  freeswitchdialplan.py  freeswitchdirectory.py
Sevet/buildscript/: .gitignore  build-from-git  build-from-tarball
Sevet/debian-packages/: .gitignore  build
aeriandi/: librabbitmq1-dev_1.0.1-1ubuntu1_amd64.deb  librabbitmq1_1.0.1-1ubuntu1_amd64.deb
aeriandi/mod_amqp/: Makefile  README  amqp_settings.h  mod_amqp.c
cparker/mod_xml_radius/: Makefile  Makefile.am  README  mod_xml_radius.c
cparker/mod_xml_radius/conf/: README  dictionary  mod_xml_radius.conf.xml
cparker/mod_xml_radius/conf/xml_radius_templates/: directory.xml
crienzo/mod_simple_lcr/: Makefile.am  README  mod_simple_lcr.c  route_trie.c  route_trie.h
crienzo/mod_simple_lcr/conf/autoload_configs/: simple_lcr.conf.xml
crienzo/mod_simple_lcr/conf/ratedecks/: areas.csv  ratedeck1.csv  ratedeck2.csv
crienzo/mod_simple_lcr/sipp/: callerid  genload.xml  numbers
crienzo/mod_simple_lcr/test/: Makefile  test.c
diegoviola/: callcard  callcard.rb
dschreiber/mod_nibblebill/: mod_nibblebill.c
eschmidbauer/mod_sofia/: csta.diff
eschmidbauer/mod_voicemail_originate/: mod_voicemail_originate.c
gled/esl2agi/: Makefile  README  esl2agi.c  esl2agi.h
gled/mod_fgi/: Makefile  mod_fgi.c
gled/patches/: esl_php.txt
gled/php/: README  check.php  class.ivr.php  event_listener.php  processhandler.php  test.php
grmt/mod_tts_commandline for windows/: README.txt  mod_tts_commandline.2008.vcproj  mod_tts_commandline.2010.vcxproj
grmt/svox pico/: mparent.diff  (+1 more)
grmt/svox pico/popt/: .cvsignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  config.h  config.h.cmake  configure.ac  popt.sdf  popt.sln  popt.vcxproj  popt.vcxproj.filters  popthelp.c  poptparse.c  system.h  tdict.vcxproj  tdict.vcxproj.filters  test1.c  test1.vcxproj  test1.vcxproj.filters  test2.vcxproj  test2.vcxproj.filters
grmt/svox pico/popt/Debug/: ResolveAssemblyReference.cache  popt.lib  tdict.ilk  test1.ilk  test2.ilk
grmt/svox pico/popt/Win32/Debug/ALL_BUILD/: ResolveAssemblyReference.cache  custombuild.read.1.tlog  custombuild.write.1.tlog
grmt/svox pico/popt/Win32/Debug/INSTALL/: ResolveAssemblyReference.cache
grmt/svox pico/popt/Win32/Debug/ZERO_CHECK/: ZERO_CHECK.lastbuildstate  custombuild.read.1.tlog
grmt/svox pico/popt/ipch/popt-62e361bb/: popt-d6247a7b.ipch
grmt/svox pico/popt/popt.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
grmt/svox pico/popt/tdict.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  tdict_manifest.rc
grmt/svox pico/popt/test1.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  test1_manifest.rc
grmt/svox pico/popt/test2.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  test2_manifest.rc
grmt/svox pico/popt/x64/Debug/ALL_BUILD/: ALL_BUILD.lastbuildstate
grmt/svox pico/popt/x64/Debug/ZERO_CHECK/: custombuild.command.1.tlog  custombuild.write.1.tlog
jmesquita/: phrase_pt_br.xml
jtregunna/: weather.js
ledr/: .gitignore
mcollins/: 01_FIFO_example.xml  access_log.pl  check_fs_channels.pl  create-chanvars-html-page.pl  extract-fs-vars-from-source-tree.sh  pico-git.sh  randomize-passwords.pl  uuid_send_dtmf.lua
mitchcapper/: fs_logger.pl  fs_logger.txt
mod/applications/mod_ha_cluster/: Makefile.am  build_ha_cluster.patch  ha_cluster.conf.xml  ha_cluster_config.c  ha_cluster_interfaces.c  ha_cluster_util.c  mod_ha_cluster.c  mod_ha_cluster.h
nazim/xmlcdrd/: AUTHORS  Makefile.am  bootstrap.sh  configure.ac  log.c  log.h  main.c  plug.c  plug.h  plugcommon.h  plugldr.c  plugldr.h  stmtexp.c  stmtexp.h  stmtexpldr.c  stmtexpldr.h  stmtexptab.h  test.xml  urldecode.c  urldecode.h
nazim/xmlcdrd/conf/: db1.conf  lighttpd.conf.example  luaexec.conf.dist  test.lua  xmlcdr.conf.dist
nazim/xmlcdrd/plugins/luaexec/: Makefile.am  luaexec.c
nazim/xmlcdrd/plugins/mysqlcdr/: Makefile.am  dbcommon.c  dbcommon.h  mysqlcdr.c
nazim/xmlcdrd/plugins/radcdr/: Makefile.am  radcdr.c  radcdr.conf
seven/: README
shahzad/: README.1st
shahzad/libmsn/: CMakeLists.txt  libmsn.pc.cmake
shahzad/libmsn/doc/: OVERVIEW
shahzad/libmsn/msn/: CMakeLists.txt  authdata.cpp  authdata.h  buddy.cpp  buddy.h  config.h.cmake  connection.cpp  errorcodes.h  externals.h  message.cpp  msn.h  msnobject.cpp  notificationserver.cpp  notificationserver.h  p2p.cpp  p2p.h  passport.cpp  soap.cpp  soap.h  switchboardserver.cpp  switchboardserver.h  util.cpp  util.h
shahzad/libmsn/msntest/: CMakeLists.txt  msntest.cpp
swk/: README
tc/: .gitignore
tobarja/: cid_name_prefix.lua  disa.lua  set_cid_name.lua  split.lua  trim.lua
trixter/: Parse_XML_CDR.php  README  apiexec.pl  asyncsock.pl  call-progress.pl  callcredit.pl  calls.pl  conf-dtmf.pl  disa.js  faxlib.jm  gcccpuopt  jp.pl  makecombinedfsxml.pl  makemodconf.pl  mod_xml_cdr.c  newgcc-2.svndiff  newgcc.svndiff  regexptest.pl  scheduled_event.lua  softphone.pl  switch_xml.c  validate-ivr.pl
vile/: fsconsole.c
wasim/: cFS.pl  cdrload.pl  fshour.pl
(+867 files in other folders)
